microservice3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice3
  template:
    metadata:
      labels:
        app: microservice3
    spec:
      containers:
      - name: microservice3
        image: hello-world-node:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1"
