microservice5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice5
  template:
    metadata:
      labels:
        app: microservice5
    spec:
      containers:
      - name: microservice5
        image: hello-world-node:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "512Mi"
            cpu: "2"
