microservice3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice3-service
spec:
  selector:
    app: microservice3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
