microservice4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice4-service
spec:
  selector:
    app: microservice4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
