microservice5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice5-service
spec:
  selector:
    app: microservice5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
